After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777465 - Sound Juicer silently fails to write extracted audio files to a directory which is a symlink
Sound Juicer silently fails to write extracted audio files to a directory whi...
Status: RESOLVED FIXED
Product: sound-juicer
Classification: Applications
Component: ripping
3.22.x
Other Linux
: Normal normal
: ---
Assigned To: Sound Juicer Maintainers
Sound Juicer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-01-18 20:48 UTC by Tim Jackson
Modified: 2017-02-13 10:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Follow symbolic links to when extracting tracks (1.29 KB, patch)
2017-01-24 11:28 UTC, Phillip Wood
committed Details | Review

Description Tim Jackson 2017-01-18 20:48:03 UTC
Selecting a symlinked directory as the destination for extracted audio files results in Sound Juicer silently ignoring the destination and instead writing to the default output directory.

Consistently reproducible using Sound Juicer 3.22.1 on Fedora 25 (package: sound-juicer-3.22.1-1.fc25.x86_64 ).


STEPS TO REPRODUCE
1. Execute the following in a suitable directory in a shell:

mkdir Test
ln -s Test Test2

2. Go to the Sound Juicer UI. Preferences -> Music Folder, select "Test2" as the destination.

3. Rip a CD

EXPECTED RESULTS
The output files are in the folder Test2 (=Test)

ACTUAL RESULTS
The output files are in the default output folder ("$HOME/Music" for me)

OTHER INFORMATION
You can verify with dconf that the configuration option for the destination directory is indeed correctly set.
Comment 1 Phillip Wood 2017-01-19 11:05:06 UTC
Thanks for taking the time to report this issue. It looks like sound juicer stopped following symlinks in commit 89f15750 - Use GSettings instead of GConf. I'm not sure why the change was made - I've cc'd 
Chirstophe to see if he remembers. While there are security issues with following symlinks to temporary files I'm not sure they're that relevant here
Comment 2 Christophe Fergeau 2017-01-19 17:24:00 UTC
I don't really remember, but I don't think this was an intentional change.
Comment 3 Phillip Wood 2017-01-24 11:28:25 UTC
Created attachment 344109 [details] [review]
Follow symbolic links to when extracting tracks

Commit 89f15750 - ‘Use GSettings instead of GConf’ added some checks to
make sure the gsettings key for the Music directory referred to a
directory. The check does not follow symbolic links which was not the
intention so change it to follow them.
Comment 4 Phillip Wood 2017-02-13 10:57:55 UTC
Attachment 344109 [details] pushed as a07ff3b - Follow symbolic links to when extracting tracks