Follow symbolic links to when extracting tracks

Commit 89f15750 - ‘Use GSettings instead of GConf’ added some checks to
make sure the gsettings key for the music directory referred to a
directory. The check does not follow symbolic links which was not the
intention so change it to follow them.

https://bugzilla.gnome.org/show_bug.cgi?id=777465